[tool.poetry]
name = "WeAreJACK"
version = "0.1.0"
description = "Jack's adventure in the giant land"
authors = ["Pradchayaporn Nonthavanich <jigsawwpuzzles@gmail.com>",
            "Natnaree Chongsiriwattana <khawnat.c@gmail.com>",
            "ziying wu <nthysj@gmail.com>"
            "chollada panbutr <c-chollada84@hotmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
